--- a/_site.yml
+++ b/_site.yml
@@ -11,7 +11,7 @@ navbar:
     - icon: fa-envelope fa-lg
       href: contact.html
     - icon: fa-github fa-lg
-      href: http://github.com/frymor
+      href: https://github.com/frymor
     - icon: fa-twitter fa-lg
       href: https://twitter.com/AssaYeroslaviz
     - icon: fa-linkedin fa-lg
