--- a/_site.yml
+++ b/_site.yml
@@ -11,13 +11,13 @@ navbar:
     - icon: fa-envelope fa-lg
       href: contact.html
     - icon: fa-github fa-lg
-      href: https://github.com/frymor
+      href: https://github.com/yeroslaviz
     - icon: fa-twitter fa-lg
       href: https://twitter.com/AssaYeroslaviz
     - icon: fa-linkedin fa-lg
       href: https://www.linkedin.com/in/ayeroslaviz/
 output:
   html_document:
-    theme: flatly        
+    theme: flatly
     highlight: textmate
     css: 'styles.css'
