--- a/config.yaml
+++ b/config.yaml
@@ -2,29 +2,33 @@
 # To get the correct data copy-paste the link for the fastA and gtf files in the correct row.
 
 organism:
-  Dmel:
+  Hsp:
+    fasta: "ftp://ftp.ensembl.org/pub/release-98/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna.primary_assembly.fa.gz"
+    gtf: "ftp://ftp.ensembl.org/pub/release-98/gtf/homo_sapiens/Homo_sapiens.GRCh38.98.gtf.gz"
+  Mmu:
+    fasta: "ftp://ftp.ensembl.org/pub/release-98/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna.primary_assembly.fa.gz"
+    gtf: "ftp://ftp.ensembl.org/pub/release-98/gtf/mus_musculus/Mus_musculus.GRCm38.98.gtf.gz"
+  Cel:
+    fasta: "ftp://ftp.ensembl.org/pub/release-98/fasta/caenorhabditis_elegans/dna/Caenorhabditis_elegans.WBcel235.dna.toplevel.fa.gz"
+    gtf: "ftp://ftp.ensembl.org/pub/release-98/gtf/caenorhabditis_elegans/Caenorhabditis_elegans.WBcel235.98.gtf.gz"
+  Eco:
+    fasta: "ftp://ftp.ensemblgenomes.org/pub/release-45/bacteria//fasta/bacteria_91_collection/escherichia_coli/dna/Escherichia_coli.HUSEC2011CHR1.dna.toplevel.fa.gz"
+    gtf: "ftp://ftp.ensemblgenomes.org/pub/release-45/bacteria//gtf/bacteria_91_collection/escherichia_coli/Escherichia_coli.HUSEC2011CHR1.45.gtf.gz"
+  Dre:
+    fasta: "ftp://ftp.ensembl.org/pub/release-98/fasta/danio_rerio/dna/Danio_rerio.GRCz11.dna.primary_assembly.fa.gz"
+    gtf: "ftp://ftp.ensembl.org/pub/release-98/gtf/danio_rerio/Danio_rerio.GRCz11.98.gtf.gz"
+  Dme:
     fasta: "ftp://ftp.ensembl.org/pub/current_fasta/drosophila_melanogaster/dna/Drosophila_melanogaster.BDGP6.22.dna.toplevel.fa.gz"
     gtf: "ftp://ftp.ensembl.org/pub/current_gtf/drosophila_melanogaster/Drosophila_melanogaster.BDGP6.22.98.gtf.gz"
-  Dpse:
-    fasta: "ftp://ftp.ensemblgenomes.org/pub/current/metazoa/fasta/drosophila_pseudoobscura/dna/Drosophila_pseudoobscura.Dpse_3.0.dna.toplevel.fa.gz"
-    gtf: "ftp://ftp.ensemblgenomes.org/pub/current/metazoa/gtf/drosophila_pseudoobscura/Drosophila_pseudoobscura.Dpse_3.0.45.gtf.gz"
-
-
-#fastA:
-####### D. mel
-#  "ftp://ftp.ensembl.org/pub/current_fasta/drosophila_melanogaster/dna/Drosophila_melanogaster.BDGP6.22.dna.toplevel.fa.gz"
-
-#gtf:
-####### D. mel
-#  "ftp://ftp.ensembl.org/pub/current_gtf/drosophila_melanogaster/Drosophila_melanogaster.BDGP6.22.98.gtf.gz"
 
 
 ##############STAR
 ## parameters for STAR indexing
 RAM:
-  141278166400 #  set maximum available RAM (bytes) for genome generation
+  168632718037
+   #  set maximum available RAM (bytes) for genome generation
 SAindex:
-  13 # For small genomes, the parameter --genomeSAindexNbases needs to be scaled down (default is 14).
+  14 # For small genomes, the parameter --genomeSAindexNbases needs to be scaled down (default is 14).
 ## Is your library stranded? options are [true, false]
 stranded: false
 ## Are the input files compressed [true, false]
