--- a/config.v5.yaml
+++ b/config.v5.yaml
@@ -39,3 +39,5 @@ gzipped: true
 project: "P44"
 # this path would point to the raw data in fastq format. This must be changed each time for the correct data to be analyzed.
 path: "/fs/pool/pool-bcfngs/fastq_files/P44/P44_20181015_tRNA_RP/conc.fastq/"
+# Which organism to map the data to
+org: "Hsp.GRCh38"
