updated paired-end script
changed the paths to absolute paths, so that they can be found in the analysis

--- a/config.yaml
+++ b/config.yaml
@@ -40,4 +40,4 @@ project: "P000"
 # this path would point to the raw data in fastq format. This must be changed each time for the correct data to be analyzed.
 path: "/fs/pool/pool-bcfngs/fastq_files/P000/P000_Testrun/conc.fastq/"
 # Which organism to map the data to
-org: "Hsp.GRCh38"
+org: "Cel.WBcel235"
